--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,9 @@ spring:
   application:
     name: demo
   datasource:
-    url: jdbc:postgresql://ep-raspy-rice-a1ig6dmo.ap-southeast-1.aws.neon.tech/demo?user=neondb_owner&password=0ZEgo3qXkzdG&sslmode=require
-    username: postgres
-    password: secret99
-
+    url: ${DATABASE_URL:jdbc:postgresql://ep-raspy-rice-a1ig6dmo.ap-southeast-1.aws.neon.tech/demo?sslmode=require}
+    username: ${DB_USERNAME:neondb_owner}
+    password: ${DB_PASSWORD:0ZEgo3qXkzdG}
   main:
     allow-circular-references: true
   jpa:
@@ -16,4 +15,15 @@ spring:
             non_contextual_creation: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    show-sql: false
+
+# Server configuration
+server:
+  port: ${PORT:8080}
+
+# Logging configuration
+logging:
+  level:
+    org.springframework: INFO
+    demo: DEBUG
